0022483: ZBufferTrihedron loses user-defined color